# raturi-djreact1

./: .gitignore  README.md  pyproject.toml
djwebpack/djwebpack/: asgi.py  settings.py  urls.py  wsgi.py
djwebpack/frontend/: .gitignore  package-lock.json  package.json  webpack-stats.json  webpack.config.js
djwebpack/pages/: urls.py  views.py
djwebpack/static/: static_test.html
djwebpack/templates/: index1.html  index2.html
